# flask-ml-app

./: .gitignore  main.py  pyproject.toml  settings.py
app/controllers/: forms.py  roboter.py
app/models/: db.py  rate.py  restaurant.py  user.py
static/: style.css
templates/: base.html  evaluate_restaurant.html  good_by.html  hello.html  recommend_restaurant.html
