[tool.poetry]
name = "roboter2"
version = "0.1.0"
description = ""
authors = ["MakMemEng <yatani.mems4568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blask = "^0.2.3"
isort = "^5.12.0"
flask = "2.0.3"
flask-wtf = "1.0.1"
pandas = "^2.0.3"
sqlalchemy = "^2.0.20"
scikit-surprise = "^1.1.3"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
